--- a/project-service/build.gradle
+++ b/project-service/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
     implementation 'org.jetbrains:annotations:20.1.0'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.4'
 }
 
 test {
